# metahackathon

./: .dockerignore  .gitignore  Dockerfile  README.md  backend.py  file_parser.py  inference.py  models.py  openenv.yaml  pyproject.toml  requirements.txt  run_dashboard.py  run_training.py  run_triage.py  test_env.py  test_graders.py  verify_graders.py
agent/: __init__.py  config.py  dashboard.py  memory.py  reasoning.py  rl.py  triage_agent.py
agent_data/: experience_buffer.json  reflection_memory.json  training_metrics.json
app/: __init__.py  environment.py  models.py
backend_api/: main.py
data/: reports.json
env/: __init__.py  actions.py  ai_fixer.py  environment.py  graders.py  observations.py  reward.py  state.py  tasks.py  tasks_extended.py  triage_env.py
frontend/: index.html  package-lock.json  package.json  vite.config.js
frontend/src/: App.jsx  index.css
frontend/src/components/: ActionCard.jsx  AnalyzeButton.jsx  ExplainabilityPanel.jsx  ExplanationPanel.jsx  FileUpload.jsx  Header.jsx  HistoryPanel.jsx  InputPanel.jsx  Loader.jsx  ReportCard.jsx  ReportInput.jsx  ResultDashboard.jsx  RewardMeter.jsx  ScoreBreakdown.jsx  SeverityBadge.jsx
frontend/src/data/: mockData.js
grader/: __init__.py  cvss_grader.py
server/: __init__.py  app.py  environment.py  tasks.py
tasks/: __init__.py  easy.py  graders.py  hard.py  medium.py  task_definitions.py
